<resources>
    <string name="app_name">PayInHome App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти или зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Этот адрес неверно указан</string>
    <string name="error_invalid_password">Этот пароль слишком короток</string>
    <string name="error_incorrect_password">Этот пароль некорректен</string>
    <string name="error_field_required">Заполните поле</string>
    <string name="permission_rationale">"Укажите Ваши контакты"
    </string>
    <string name="text_news">05.06.2017 Ваш дом подключен к системе автоматического сбора показаний приборов учета подробнее... 05.06.2008 В вашем доме завершен монтаж системы видонаблюдения подробнее...</string>
    <string name="enter_text">Войти</string>
    <string name="button_text_registration">Регистрация</string>
    <string name="mts_inhome">MTS InHome</string>
    <string name="pay_in_home">Pay InHome</string>
    <string name="text_view_counters">Счетчики</string>
    <string name="text_view_pay_page">Оплата услуг</string>
    <string name="text_view_chat">Чат</string>
    <string name="button_chat">Chat Page Button</string>
    <string name="button_pay">PayPage</string>
    <string name="button_counters">Counters</string>
    <string name="button_quotes">Quotes</string>
    <string name="button_additions">Additions</string>
    <string name="button_helppage">HelpPage</string>
    <string name="text_view_quotes">Мои заявки</string>
    <string name="text_view_additions">Доп. услуги</string>
    <string name="text_view_help">Help</string>
    <string name="text_view_my_data">Мои данные</string>
    <string name="text_nav_settings">Settings</string>
    <string name="text_nav_payment">Платежные реквизиты</string>
    <string name="text_nav_all_settings">Настройки приложения</string>
    <string name="string_back_button_image">BackButtonImage</string>
    <!-- Fragment strings-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Counters Data Strings -->
    <string name="string_counters_data">Показания счетчиков</string>
    <string name="strings_button_current_counters_data">Текущие</string>
    <string name="strings_button_counters_all_data">Общие</string>
    <string name="strings_cold_water">Холодная вода</string>
    <string name="strings_000001">000001</string>
    <string name="strings_ok">Ok</string>
    <string name="strings_Send">Отправить</string>
    <string name="strings_gas">Газ</string>
    <string name="strings_electricity">Электроэнергия</string>
    <string name="strings_hot_water">Горячая вода</string>
    <string name="todo">todo</string>
</resources>
