<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>


        <item
            android:checkableBehavior="single"
            android:title="@string/text_nav_all_settings">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/text_nav_settings" />
            <item
                android:id="@+id/nav_payment_adress"
                android:icon="@drawable/ic_launcher_web"
                android:title="@string/text_nav_payment" />
            <item
                android:id="@+id/nav_counters"
                android:icon="@drawable/ic_launcher_web"
                android:title="Данные счетчиков" />
            <item
                android:id="@+id/nav_addition"
                android:icon="@drawable/ic_launcher_web"
                android:title="лишняя кнопка" />

        </item>
    </group>

</menu>
