<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.android.payinhomev2.FrontScreen">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:shadowColor="@android:color/darker_gray"
        android:text="@string/pay_in_home"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="136dp"
        android:layout_height="146dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/ic_launcher_web"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:shadowColor="@android:color/black"
        android:shadowRadius="1"
        android:text="@string/button_text_registration" />

    <Button
        android:id="@+id/enter_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:shadowColor="@android:color/black"
        android:shadowRadius="1"
        android:text="@string/enter_text" />


</LinearLayout>